AoE effect added, particle animation overlap fixes

--- a/Assets/CSS/abilities.scss
+++ b/Assets/CSS/abilities.scss
@@ -17,6 +17,8 @@
     line-height: 48px;
     text-align: center;
     font-size: 24px;
+
+    cursor: pointer;
   }
   .ability:last-child {margin-right: 0;}
   
